--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,22 @@
 html {
-    height: 100%;
+  font-family: "Raleway", sans-serif;
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
     overflow: hidden;
-  }
-  
-  #stars2 {
-    position: fixed;
     z-index: -1;
+}
+
+
+  .background li {
     width: 2px;
     height: 2px;
     background: transparent;
@@ -14,9 +24,7 @@ html {
     animation: animStar 100s linear infinite;
   }
   
-  #stars3 {
-    position: fixed;
-    z-index: -1;
+  .background .star2 {
     width: 3px;
     height: 3px;
     background: transparent;
@@ -29,6 +37,6 @@ html {
       transform: translateY(0px);
     }
     to {
-      transform: translateY(-2000px);
+      transform: translateY(-1500px);
     }
   }
