--- a/client/src/components/settimana/settimana.css
+++ b/client/src/components/settimana/settimana.css
@@ -15,6 +15,8 @@
   justify-content: space-evenly;
   /* gap: 35%; */
   height: 100%;
+  backdrop-filter: blur( 3.0px );
+  -webkit-backdrop-filter: blur( 3.0px );
 }
 
 .gridButtons:nth-child(1) {
@@ -53,7 +55,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   width: 100%;
-  font-size: 18px;
+  font-size: 21px;
 }
 
 .card-title {
@@ -65,6 +67,13 @@
 .card-text {
   font-size: 16px;
   text-align: left;
+}
+
+.card-text.prev {
+  font-size: 16px;
+  text-align: center !important;
+  white-space: nowrap;
+  
 }
 
 
